fixed navbar padding and added click effect on mobile

--- a/RWD_HexRestaurant/SCSS/layout/_header.scss
+++ b/RWD_HexRestaurant/SCSS/layout/_header.scss
@@ -36,7 +36,7 @@ body {
   color: $white;
   // 設定圖層屬性為2以上, 使得其他引用layout.scss的各個分頁的內容將不會疊加在導覽列之上
   z-index: 2;
-  
+
   @include mobile () {
     position: fixed;
     padding: 16px 14px;
@@ -70,7 +70,7 @@ body {
   .menu {
     display: flex;
     align-items: center;
-  
+
     @include mobile () {
       // 相對於.navbar在mobile解析度時的相對定位, 這裡設定為絕對定位, 以利產生出漢堡選單的效果
       position: absolute;
@@ -102,7 +102,7 @@ body {
 
   .menu li a {
     display: block;
-    padding: 16px 30px;
+    padding: 16px 20px;
     text-decoration: none;
     color: $white;
     font-size: 1em;
@@ -112,11 +112,16 @@ body {
     background-color: $main-bg;
     color: $brown;
   }
+
+  .menu li a:active {
+    background-color: $orange;
+    color: $white;
+  }
 }
 
 .show-mobile-menu .menu {
   @include mobile () {
-  // 將漢堡選單的高度設為400px
+    // 將漢堡選單的高度設為400px
     max-height: 400px;
   }
 }
@@ -133,7 +138,7 @@ body {
   align-items: center;
   color: $white;
   text-align: center;
-  
+
   @include mobile () {
     background-image: url(../images/index/header_mobile.png);
   }
@@ -142,7 +147,7 @@ body {
     background-color: rgba(0, 0, 0, 0.35);
     padding: 20px 32px 26px 32px;
     line-height: 1.5;
-  
+
     @include mobile () {
       padding: 20px 6px;
     }
@@ -151,7 +156,7 @@ body {
   h2 {
     font-size: 2.25em;
     padding-bottom: 16px;
-    
+
     span {
       @include mobile () {
         display: block;
